Fix z-index

--- a/src/styles/layout/DicePage.scss
+++ b/src/styles/layout/DicePage.scss
@@ -31,7 +31,7 @@
 		
 	&.hidden {
 		opacity: 0;
-		z-index: 4;
+		z-index: 3;
 	}
 	&::after {
 		content: '';
